--- a/ex5_report/README.tex
+++ b/ex5_report/README.tex
@@ -48,6 +48,7 @@
 \usepackage{tkz-graph}
 \usepackage{adjustbox}
 \usepackage{cancel}
+\usepackage[percent]{overpic}
 
 \newlist{filedescription}{description}{2}
 \setlist[filedescription]{font=\normalfont\normalcolor\bfseries\itshape}
@@ -131,9 +132,17 @@ The \filename{code} directory contains the followings:
 	\item [part2] script .m file for exercise part 2.
 	\item [lotr.jpg] original image file.
 	\item [results] directory contains result images of part 2.
-\end{filedescription}
+\end{filedescription} 
 
-For running \filename{part2.m} script, adjust parameters first. TODO
+For running \filename{part2.m} script, adjust options first:
+
+\begin{paramdescription}
+	\item [gf\_on] true for Gaussian filtering on. 
+	\item [hd\_on] true for Heat diffusion on.
+	\item [va\_on] true for variational method on.
+	\item [save\_jpg] true for saving result images.
+	\item [results\_dir] result images directory path.   
+\end{paramdescription}
 
 Note that \textbf{these script was only tested in MATLAB R2016b environment}.
 
@@ -161,8 +170,7 @@ The linear combination of dual quaternions does not make artifacts or skin-colla
 	
 	\item Briefly explain one fundamental disadvantage of using quaternion based shortest path blending for rotations as compared to linear blend skinning? \\
 	
-TODO 
-Dual quaternions causes "flipping artifacts" which occurs with joint rotations of more than 180 degrees, This is a corollary of the shortest path property: when the other path becomes shorter, the skin changes its shape discontinuously. \\
+Dual quaternions causes "flipping artifacts" which occurs with joint rotations of more than 180 degrees. Because of its shortest path property, when the other path becomes shorter, the skin changes its shape discontinuously. \\
 
 \end{itemize}
 
@@ -242,22 +250,20 @@ Dual quaternions causes "flipping artifacts" which occurs with joint rotations o
 		}
 	\caption{An object (left) is first rotated around its center of mass (middle) and then translated (right)}
 	\end{subfigure}
-	\hspace{5mm}
-	\vspace{5mm}
+%	\hspace{0mm}
 	\begin{subfigure}[b]{0.225\textwidth}
-		\noindent\makebox[\textwidth]{
-		  \includegraphics[width=\textwidth]{task2-fig-2.png}
-		}
+		\begin{overpic}[width=\textwidth]{task2-fig-2.png}
+			\put (25,70) {$\vec{r}$}
+		\end{overpic}
 	\caption{Shifting the screw axis}
 	\end{subfigure}
 	\end{figure}
 	
-	Dual quaternion can be intuitively represented by a screw which of unit vector $\vec{s}_0$ as a screw axis, $\theta_0$ the angle of rotation and $\theta_\epsilon$ is the amount of translation. For the 2D case of Figure 1.1, if the axis of screw is shifted to point $\vec{r}$, as shown in Figure 1.1 (b) such transformation can be represented as a screw axis i.e. dual quaternion. In this case, $\vec{s}_\epsilon = \vec{r} \times \vec{s}_0$   
-	
-	\textbf{TODO additional explanation + r draw} 
+	For the 2D case of Figure 1.1, if the axis of dual quaternion(screw) is shifted to point $\vec{r}$ as shown in Figure 1.1 (b), such transformation can be represented as a screw axis i.e. dual quaternion. In this case, $\vec{s}_\epsilon = \vec{r} \times \vec{s}_0$.
 	
 \end{itemize}
 
+\pagebreak
 
 %----------------------------------------------------------------------------------------
 %	PROBLEM 2 
@@ -265,13 +271,34 @@ Dual quaternions causes "flipping artifacts" which occurs with joint rotations o
 
 \section{exercise part 2: Variational Methods - Denoising problems}
 
-In this section, three different denoising methods were implemented and compared:
+In this section, three different denoising methods(filtering, heat diffusion and variational approach) were implemented and compared.
 
-\begin{itemize}
-	\item Filtering
-	\item Heat diffusion
-	\item Variational approach
-\end{itemize}
+\graphicspath{{results/}}
+\vspace{-2mm}
+\begin{figure}[H]
+	\caption{Original images and noised image\label{fig:simple}}
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{lotr.jpg}
+		}
+	\caption{Original image}
+	\end{subfigure}
+	\hspace{5mm}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{gray_image.jpg}
+		}
+	\caption{Grayscale image}
+	\end{subfigure}
+	\hspace{5mm}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{noisy_image.jpg}
+		}
+	\caption{Noised image}
+	\end{subfigure}
+\end{figure}
 
 %----------------------------------------------------------------------------------------
 %	TASK 1
@@ -279,107 +306,11 @@ In this section, three different denoising methods were implemented and compared
 
 \subsection{Task 1: Filtering}
 
-%----------------------------------------------------------------------------------------
-%	TASK 2
-%----------------------------------------------------------------------------------------
+By convolution with Gaussian filter($\sigma = 0.5$), the gaussian noise was denoised. 
 
-\subsection{Task 2: Heat diffusion}
-
-%----------------------------------------------------------------------------------------
-%	TASK 3
-%----------------------------------------------------------------------------------------
-
-\subsection{Task 3: Variational approach}
-
-
-%----------------------------------------------------------------------------------------
-\subsubsection{Description}
-
-Finally, variational approach was implemented. This method considers the image as function of the space of all images. 
-TODO
-
-\paragraph{Derivation of Euler-Lagrange equation}
-
-The energy function for denoising problem can be defined as follows:
-\begin{align}
-	E(I) = \int_{\Omega}\Big[\big(I(\vec{x}) - I_0(\vec{x})\big)^2 + \lambda \norm{\nabla_{\vec{x}} I(\vec{x})}^2 \Big]	d\vec{x}
-\end{align}
-
-where, $\Omega = \mathbb{R}^2$ is the domain of the 2D image, $I_0$ the noisy image, and $\lambda$ a regularization parameter. $I, I_0 \in \mathcal{V} = \mathcal{L}^2(\Omega)$. \\
-
-Let's define the function $L(I, \nabla I, \vec{x})$ as follows: 
-\begin{align}
-	L(I, \nabla I, \vec{x}) = \Big[\big(I(\vec{x}) - I_0(\vec{x})\big)^2 + \lambda \norm{\nabla_{\vec{x}} I(\vec{x})}^2 \Big]
-\end{align}
-
-Then the G\^ateaux derivative is given by 
-\begin{align}
-	\delta E(I;h) &= \lim_{\alpha \to 0} \frac{1}{\alpha}\Big(E(I + \alpha h) - E(I)\Big) \\
-	&= \lim_{\alpha \to 0} \frac{1}{\alpha} \int_\Omega \Big(L(I + \alpha h, \nabla I + \alpha \nabla h, \vec{x}) - L(I, \nabla I, \vec{x}) \Big) d\vec{x} \\ 
-	\shortintertext{apply Taylor expansion:} 
-	&= \lim_{\alpha \to 0} \frac{1}{\alpha} \int_\Omega \Big( \cancel{L(I, \nabla I, \vec{x})} + \alpha \frac{\partial L}{\partial I} h + \alpha \frac{\partial L}{\partial (\nabla I)} \nabla h + o(\alpha^2) - \cancel{L(I, \nabla I, \vec{x})} \Big) d\vec{x} \\
-	&= \int_\Omega \Big( \frac{\partial L}{\partial I} h + \frac{\partial L}{\partial (\nabla I)} \nabla h \Big) d\vec{x} \\
-	\shortintertext{apply integration by parts and $h = 0$ on boundary :} 
-	&= \int_\Omega \frac{\partial L}{\partial I} h \, d\vec{x} + \cancelto{0}{h \frac{\partial L}{\partial (\nabla I)} \Bigg|_\Omega}  - \int_\Omega \nabla \frac{\partial L}{\partial (\nabla I)} h \, d\vec{x} \\
-	&= \int_\Omega \Big( \frac{\partial L}{\partial I} - \nabla \frac{\partial L}{\partial (\nabla I)} \Big)h(\vec{x}) \, d\vec{x}
-\end{align} \\
-
-Remark following theorem:
-
-\begin{theorem}
-	If $\hat{u}$ is an extremum of a functional $E : \mathcal{V} \rightarrow \mathbb{R}$, then \\
-	\begin{equation*}
-		\delta E(\hat{u}, h) = 0 \quad \forall h \in \mathcal{V}.
-	\end{equation*} \\
-\end{theorem}
-
-By (2.8) and \textbf{Theorem 1}, 
-\begin{equation}
-	\frac{\partial L}{\partial I} - \nabla \frac{\partial L}{\partial (\nabla I)} = 0	
-\end{equation}
-
-
-Plug (2.2) into (2.9): 
-\begin{align}
-	\frac{\partial L}{\partial I} &= 2 \big(I - I_0) \\
-	\nabla \frac{\partial L}{\partial (\nabla I)} &= 2 \lambda \, \nabla \cdot (\nabla I) \\ 
-	&= 2 \lambda \, \textbf{div}(\nabla I)
-\end{align}
- 
-TODO CHECK!
-
-
-
-
-\paragraph{Vectorization and Linear operation}
-
-\subsubsection{Results}
-
-\graphicspath{{results/}}
-
-\begin{figure}[b]
-	\caption{Denoised image with variational method\label{fig:simple}}
-	\centering
-	\begin{subfigure}[b]{0.45\textwidth}
-		\noindent\makebox[\textwidth]{
-		  \includegraphics[width=\textwidth]{noisy_image.jpg}
-		}
-	\caption{Noisy image}
-	\end{subfigure}
-	\hspace{5mm}
-	\vspace{5mm}
-	\begin{subfigure}[b]{0.45\textwidth}
-		\noindent\makebox[\textwidth]{
-		  \includegraphics[width=\textwidth]{noisy_image.jpg}
-		}
-	\caption{Variational denoising}
-	\end{subfigure}
-\end{figure}
-
-
-
-\begin{figure}[b]
-	\caption{Denoised image after filtering multiple time\label{fig:simple}}
+\vspace{-2mm}
+\begin{figure}[H]
+	\caption{Denoised image after filtering multiple time ($\sigma = 0.5$)\label{fig:simple}}
 	\centering
 	\begin{subfigure}[b]{0.45\textwidth}
 		\noindent\makebox[\textwidth]{
@@ -410,8 +341,52 @@ TODO CHECK!
 	\end{subfigure}
 \end{figure}
 
+\begin{figure}[H]
+	\centering
+	\noindent\makebox[0.6\textwidth]{
+	  \includegraphics[width=\textwidth]{gf_errors.png}
+	}
+\caption{Mean square error evolution of Gaussian filtering ($\sigma = 0.5$)}
+\end{figure}
+
+As the iteration goes on, mean square error(MSE) changes as Figure 2.5. For $\sigma = 0.5$, the MSE is the smallest when the number of filtering is 10. \\ 
+
+The result with different value of $\sigma$ is as Figure 2.6. $\sigma$ determines level of smoothing. If $\sigma$ is too small or too large, filtering does not show effective denoising.
 
 \begin{figure}[b]
+	\caption{Denoised image with different $\sigma$\label{fig:simple}}
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{gf_32_s01.jpg}
+		}
+	\caption{$\sigma = 0.1$ (32 iter)}
+	\end{subfigure}
+	\hspace{5mm}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{gf_32.jpg}
+		}
+	\caption{$\sigma = 0.5$ (32 iter)}
+	\end{subfigure}
+	\hspace{5mm}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{gf_32_s10.jpg}
+		}
+	\caption{$\sigma = 10$ (32 iter)}
+	\end{subfigure}
+\end{figure}
+
+
+%----------------------------------------------------------------------------------------
+%	TASK 2
+%----------------------------------------------------------------------------------------
+
+\subsection{Task 2: Heat diffusion}
+
+
+\begin{figure}[H]
 	\caption{Denoised image after diffusion\label{fig:simple}}
 	\centering
 	\begin{subfigure}[b]{0.45\textwidth}
@@ -444,7 +419,132 @@ TODO CHECK!
 \end{figure}
 
 
-\begin{figure}[b]
+\begin{figure}[H]
+	\centering
+	\noindent\makebox[0.6\textwidth]{
+	  \includegraphics[width=\textwidth]{hd_errors.png}
+	}
+\caption{Mean square error evolution of Gaussian filtering ($\sigma = 0.5$)}
+\end{figure}
+
+
+
+\begin{figure}[H]
+	\caption{Denoised image with different $\tau$\label{fig:simple}}
+	\centering
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{hd_25_t001.jpg}
+		}
+	\caption{$\tau = 0.01$ (25 iter)}
+	\end{subfigure}
+	\hspace{5mm}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{hd_25.jpg}
+		}
+	\caption{$\tau = 0.1$ (25 iter)}
+	\end{subfigure}
+	\hspace{5mm}
+	\begin{subfigure}[b]{0.3\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{hd_25_t05.jpg}
+		}
+	\caption{$\tau = 0.5$ (25 iter)}
+	\end{subfigure}
+\end{figure}
+
+
+
+\begin{figure}[H]
+	\caption{Denoised image with different $\tau$\label{fig:simple}}
+	\centering
+	\begin{subfigure}[b]{0.45\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{hd_errors_t001.png}
+		}
+	\caption{$\tau = 0.01$}
+	\end{subfigure}
+	\begin{subfigure}[b]{0.45\textwidth}
+		\noindent\makebox[\textwidth]{
+		  \includegraphics[width=\textwidth]{hd_errors_t05.png}
+		}
+	\caption{$\tau = 0.5$ (diverged)}
+	\end{subfigure}
+\end{figure}
+
+
+
+%----------------------------------------------------------------------------------------
+%	TASK 3
+%----------------------------------------------------------------------------------------
+
+\subsection{Task 3: Variational approach}
+
+%----------------------------------------------------------------------------------------
+\subsubsection{Description}
+
+Finally, variational approach was implemented. This method considers the image as function of the space of all images. 
+TODO
+
+\paragraph{Derivation of Euler-Lagrange equation}
+
+The energy function for denoising problem can be defined as follows:
+\begin{align}
+	E(I) = \int_{\Omega}\Big[\big(I(\vec{x}) - I_0(\vec{x})\big)^2 + \lambda \norm{\nabla_{\vec{x}} I(\vec{x})}^2 \Big]	d\vec{x}
+\end{align}
+
+where, $\Omega = \mathbb{R}^2$ is the domain of the 2D image, $I_0$ the noisy image, and $\lambda$ a regularization parameter. $I, I_0 \in \mathcal{V} = \mathcal{L}^2(\Omega)$. \\
+
+Let's define the function $L(I, \nabla_{\vec{x}} I, \vec{x})$ as follows: 
+\begin{align}
+	L(I, \nabla_{\vec{x}} I, \vec{x}) = \Big[\big(I(\vec{x}) - I_0(\vec{x})\big)^2 + \lambda \norm{\nabla_{\vec{x}} I(\vec{x})}^2 \Big]
+\end{align}
+
+Then the G\^ateaux derivative is given by 
+\begin{align}
+	\delta E(I;h) &= \lim_{\alpha \to 0} \frac{1}{\alpha}\Big(E(I + \alpha h) - E(I)\Big) \\
+	&= \lim_{\alpha \to 0} \frac{1}{\alpha} \int_\Omega \Big(L(I + \alpha h, \nabla_{\vec{x}} I + \alpha \nabla_{\vec{x}} h, \vec{x}) - L(I, \nabla_{\vec{x}} I, \vec{x}) \Big) d\vec{x} \\ 
+	\shortintertext{apply matrix Taylor expansion:} 
+	&= \lim_{\alpha \to 0} \frac{1}{\alpha} \int_\Omega \Big( \cancel{L(I, \nabla_{\vec{x}} I, \vec{x})} + \alpha h \cdot \frac{\partial L}{\partial I} + \alpha \nabla_{\vec{x}} h \bullet \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} + o(\alpha^2) - \cancel{L(I, \nabla_{\vec{x}} I, \vec{x})} \Big) d\vec{x} \\
+	&= \int_\Omega \Big( h \cdot \frac{\partial L}{\partial I} + \nabla_{\vec{x}} h \bullet \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} \Big) d\vec{x} \\
+	\shortintertext{apply integration by parts and $h = 0$ on boundary :} 
+	&= \int_\Omega h \cdot \frac{\partial L}{\partial I} \, d\vec{x} + \cancelto{0}{h \cdot \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} \Bigg|_\Omega}  - \int_\Omega h \cdot \nabla_{\vec{x}} \bullet \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} \, d\vec{x} \\
+	&= \int_\Omega h(\vec{x}) \cdot \Big( \frac{\partial L}{\partial I} - \nabla_{\vec{x}} \bullet \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} \Big) \, d\vec{x}
+\end{align} \\
+
+Remark following theorem:
+
+\begin{theorem}
+	If $\hat{u}$ is an extremum of a functional $E : \mathcal{V} \rightarrow \mathbb{R}$, then \\
+	\begin{equation*}
+		\delta E(\hat{u}, h) = 0 \quad \forall h \in \mathcal{V}.
+	\end{equation*} \\
+\end{theorem}
+
+By (2.8) and \textbf{Theorem 1}, 
+\begin{equation}
+	\frac{\partial L}{\partial I} - \nabla_{\vec{x}} \bullet \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} = 0	
+\end{equation}
+
+
+Plug (2.2) into (2.9): 
+\begin{align}
+	\frac{\partial L}{\partial I} &= 2 \big(I - I_0) \\
+	\nabla_{\vec{x}} \bullet \frac{\partial L}{\partial (\nabla_{\vec{x}} I)} &= 2 \lambda \, \nabla_{\vec{x}} \bullet (\nabla_{\vec{x}} I) \\ 
+	&= 2 \lambda \, \textbf{div}(\nabla_{\vec{x}} I)
+\end{align}
+
+
+
+
+\paragraph{Vectorization and Linear operation}
+
+
+%----------------------------------------------------------------------------------------
+\subsubsection{Results}
+
+\begin{figure}[H]
 	\caption{Denoised image with variational method\label{fig:simple}}
 	\centering
 	\begin{subfigure}[b]{0.45\textwidth}
@@ -462,6 +562,8 @@ TODO CHECK!
 	\caption{Variational denoising}
 	\end{subfigure}
 \end{figure}
+
+
 
 
 %----------------------------------------------------------------------------------------
